--- a/mystyle.css
+++ b/mystyle.css
@@ -1,5 +1,3 @@
-h1 {color: ##53727d;/*文字色*/
-  padding: 0.5em 0;/*上下の余白*/
-  border-top: solid 3px #364e96;/*上線*/
-  border-bottom: solid 3px #364e96;/*下線*/}
+h1 {color: ##53727d;}
+
 p.sample2 {border: inset 10px #00a381;}
