--- a/mystyle.css
+++ b/mystyle.css
@@ -4,4 +4,14 @@ h3 {color: #708090;}
 h4 {color: #708090;}
 th.important{color:#000080;}
 
-p.sample3 {border: inset 10px #008080;}
+.box8 {
+    padding: 0.5em 1em;
+    margin: 2em 0;
+    color: #232323;
+    background: #fff8e8;
+    border-left: solid 10px #ffc06e;
+}
+.box8 p {
+    margin: 0; 
+    padding: 0;
+}
