--- a/mystyle.css
+++ b/mystyle.css
@@ -1,6 +1,6 @@
 h1 {color: #008b8b;}
 h2 {color: #000080;}
 h3 {color: #708090;}
-h4 {color: #f0e68c;}
+h4 {color: #708090;}
 
 th.important { color: red; }
